Add getAll method for all modules
