# app/Modules/Recipes/routes.js
@@ -2,6 +2,7 @@ const Router = require('express').Router();
 const Controller = require('./Controller');
 
 Router.post('/', Controller.create);
+Router.get('/', Controller.getAll);
 Router.get('/:id', Controller.getById);
 Router.get('/category/:id', Controller.getCategoryById);
 Router.put('/:id', Controller.update);
